--- a/src/App.scss
+++ b/src/App.scss
@@ -5,9 +5,11 @@
   padding: 0;
   margin: 0;
   font-family: "Roboto", sans-serif;
+}
+a,
+h2 {
   color: white;
 }
-
 // style for nav
 a {
   text-decoration: none;
