--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -3,6 +3,18 @@ $bg: rgb(16, 16, 16);
 .banner {
   height: 400px;
   background-color: $bg;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+
+  &::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: $bg;
+    opacity: 0.4;
+  }
 }
 
 .row {
